Fix CSS position of Vaccine Card converting absolute to fixed allowing GSAP to manage visibility

--- a/src/style.css
+++ b/src/style.css
@@ -241,7 +241,7 @@ p {
 /* ========== VACCINE BOX SPECIFICS ========== */
 
 .vaccine-card {
-  position: absolute;
+  position: fixed;
   right: 5%;
   top: 50%;
   transform: translateY(-50%) translateX(100px); 
